# covar-api

./: .gitignore  Pipfile  README.md  app.py  cdk.context.json  cdk.json
.github/workflows/: lambda_dev.yml
deployment/: README.md
deployment/docs/examples/: Working_with_STAC.ipynb
deployment/stac-api/backend/: Dockerfile
deployment/stac-api/backend/STAC/stac_item/: settings.py  utils.py
deployment/stac_api/: stac_api.py
deployment/titiler/: README.md  config.py  main.py  titiler_stacks.py
examples/notebooks/: Tessellata Getting Started.ipynb
examples/notebooks/stac/: .gitignore  01_Create_Catalog.ipynb  02_Add_Items.ipynb  README.md  pyproject.toml
stac-api/: Makefile  README.md
stac-api/backend/: .env.sample  Dockerfile  docker-compose.yml  requirements.txt
stac-api/backend/STAC/: main.py
stac-api/backend/STAC/config/: .env-example  config.py  config.yml  test_config.py
stac-api/backend/STAC/stac_item/: models.py  pagination.py  routes.py  test_queries.py  test_stac.py  utils.py
stac-api/backend/STAC/utilities/: bbox2poly.py  polygon2bbox.py
stac-api/mongo/: docker-compose.yml
stac-api/postman/: discovery-mongo api localhost.postman_collection.json  discovery-mongo api.postman_collection.json
