[tool.poetry]
name = "mermaid_2020"
version = "0.1.0"
description = ""
authors = ["James Banting <jbanting@sparkgeo.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0.0"
pystac = "^0.5.2"
pystac-io = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
